--- a/views/adminLeaveInfo.hbs
+++ b/views/adminLeaveInfo.hbs
@@ -1,9 +1,9 @@
 <div class="row d-flex flex-column align-items-center all">
-  <h1 class="m-5">公司資訊類別</h1>
+  <h1 class="m-5">公司假別類別</h1>
   <div class="row">
     <div class="industry-filter-wrapper">
-      <form action="/adminCompanyInfo">
-        <label for="search">搜尋公司資訊：</label>
+      <form action="/adminLeaveInfo">
+        <label for="search">搜尋公司假別：</label>
         <input type="text" name="search" id="search" onchange="submit()" value="{{search}}" placeholder="請輸入關鍵字...">
       </form> 
     </div>
@@ -13,26 +13,26 @@
     <div class="scroll-view">
       <ul class="list-group">
         <div class="row d-flex justify-content-center" id="data-panel">
-          {{#each adminCompanyInfo}}
+          {{#each adminLeaveInfo}}
           <div class="col-12">
             <li class="list-group-item" id="record-item" style="border: none;">
               <div class="row">
                 <div class=" item-wrapper">
                   <div class=" my-2 item-title">
                     <div class="d-flex">
-                      <div class="label-title">資訊名稱：</div>
-                      <div class="label-des">{{this.INFO_NAME}}</div>
+                      <div class="label-title">假別名稱：</div>
+                      <div class="label-des">{{this.LEAVE_NAME}}</div>
                     </div>
                     <div class="d-flex">
-                      <div class="label-title">資訊英文名稱：</div>
-                      <div class="label-des">{{this.INFO_ENTITY_NAME}}</div>
+                      <div class="label-title">假別英文名稱：</div>
+                      <div class="label-des">{{this.LEAVE_ENTITY_NAME}}</div>
                     </div>
                     
                   </div>
                   <div class="d-flex justify-content-center item-buttons">
                     <button class=" btn btn-danger mx-2" style="font-size:medium; height:fit-content"
-                        id="delete-btn" data-toggle="modal" data-target="#deleteModal" data-id="{{ this.INFO_ID }}"
-                        data-name="{{ this.INFO_NAME }}" data-category="adminCompanyInfo">
+                        id="delete-btn" data-toggle="modal" data-target="#deleteModal" data-id="{{ this.LEAVE_ID }}"
+                        data-name="{{ this.LEAVEe_NAME }}" data-category="adminLeaveInfo">
                         刪除
                     </button>
                   </div>
@@ -48,7 +48,7 @@
   <div class="col-10 my-5 d-flex">
     <div class="col-6">
       <div class="row justify-content-center">
-        <a href="/adminCompanyInfo/new" class="btn btn-outline-warning col-8" id="create-btn"
+        <a href="/adminLeaveInfo/new" class="btn btn-outline-warning col-8" id="create-btn"
           style="font-size: 1.5rem;">新增資訊</a>
       </div>
     </div>
@@ -73,11 +73,11 @@
         </button>
       </div>
       <div class="modal-body">
-        <p>確定要刪除<strong id="delete-position">{{ this.INFO_NAME }}</strong>?</p> 
+        <p>確定要刪除<strong id="delete-position">{{ this.LEAVE_NAME }}</strong>?</p> 
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-        <form action="/adminCompanyInfo/{{ this.INFO_ID }}" method="post" style="display:inline-block;" id="delete-form">
+        <form action="/adminLeaveInfo/{{ this.LEAVE_ID }}" method="post" style="display:inline-block;" id="delete-form">
           <button type="submit" class="btn btn-danger">確定</button>
         </form>
       </div>
